[package]
name = "spider_scraper"
version = "0.1.2"
edition = "2021"
description = "A css scraper using html5ever"
license = "MIT"
repository = "https://github.com/spider-rs/spider_scraper"
keywords = ["web-scraping"]
categories = ["web-programming"]

[lib]
name = "scraper"

[dependencies]
lazy_static = "1"
fast_html5ever = "0.26.6"
selectors = "0.25.0"
tendril = "0.4.3"
ahash = { version = "0.8", default-features = false, features = ["std"] }
cssparser = "0.31.2"
smallvec = "1"
ego-tree = "0.10"
hashbrown = { version = "0.15", default-features = true }
auto_encoder = { version = "0.1" }
serde = { version = "1", optional = true, features = ["derive"] }

[features]
default = []
serde = ["dep:serde"]